# belsouri-reboot

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  HOW-WE-WORK.md  LESSONS-LEARNED.md  README.md  STATUS.md  TODO.md  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
SBPF/: Anticorruption-Layer-Patterns.md  Blending-DDD-BDD-TDD.md  CLAUDE-CODE-USAGE-GUIDE.md  Caribbean-Desktop-Deployment-Strategies.md  Caribbean-Desktop-Resilience-Patterns.md  Caribbean-Hardware-Integration-Patterns.md  Clinical-Desktop-UX-Patterns.md  (+13 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: app_state.rs  lib.rs
src-tauri/src/appointments/: commands.rs  service.rs  types.rs
src-tauri/src/db/: event_store.rs  mod.rs  projection_store.rs
src-tauri/src/events/: appointments.rs  licensing.rs  mod.rs  patient_management.rs  practice_setup.rs  staff_management.rs  staff_shift.rs
src-tauri/src/licensing/: commands.rs  crypto.rs  eval_token.rs  mod.rs  service.rs  types.rs
src-tauri/src/patient_management/: commands.rs  service.rs  types.rs
src-tauri/src/practice_setup/: commands.rs  service.rs  types.rs
src-tauri/src/projections/: appointments.rs  license_status.rs  mod.rs  patient_management.rs  practice_identity.rs  practice_setup.rs  staff_management.rs  staff_shift.rs
src-tauri/src/seed/: commands.rs
src-tauri/src/staff_management/: commands.rs  service.rs  types.rs
src-tauri/src/staff_scheduling/: commands.rs  service.rs  types.rs
src-tauri/src/staff_shift/: commands.rs  types.rs
(+97 files in other folders)
