[package]
name = "belsouri"
version = "0.1.0"
description = "Offline-First Dental Practice Platform"
authors = ["Tony Moores <tony@tjm.solutions>"]
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
specta = { version = "=2.0.0-rc.22", features = ["derive"] }
specta-typescript = "0.0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
ed25519-dalek = { version = "2.1", features = ["pkcs8", "rand_core"] }
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
machine-uid = "0.5"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
rand = "0.8"

